--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 				var geometry = new THREE.BoxGeometry( 100, 100, 100 );
 
 
-				var geometry = new THREE.PlaneGeometry( 5, 20, 32 );
+				var geometry2 = new THREE.PlaneGeometry( 5, 20, 32 );
 				var material = new THREE.MeshBasicMaterial( {color: 0xffff00, side: THREE.DoubleSide} );
-				var plane = new THREE.Mesh( geometry, material );
+				var plane = new THREE.Mesh( geometry2, material );
 				scene.add( plane );
 
 				var texture = THREE.ImageUtils.loadTexture( 'files/grass.png' );
@@ -71,6 +71,9 @@
 			function animate() {
 
 				requestAnimationFrame( animate );
+
+				mesh.rotation.x += 0.005;
+				mesh.rotation.y += 0.01;
 
 				renderer.render( scene, camera );
 
