--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<body>
 
 		<script src="js/three.min.js"></script>
+		<script src="js/leap.min.js"></script>
 
 		<script>
 			var camera, scene, renderer;
@@ -40,16 +41,15 @@
 				var geometry = new THREE.BoxGeometry( 100, 100, 100 );
 
 
-				var geometry2 = new THREE.PlaneGeometry( 5, 20, 32 );
-				var material = new THREE.MeshBasicMaterial( {color: 0xffff00, side: THREE.DoubleSide} );
-				var plane = new THREE.Mesh( geometry2, material );
-				scene.add( plane );
+				var plane = new THREE.Mesh(new THREE.PlaneGeometry(300, 300), new THREE.MeshBasicMaterial({
+					color: 'red'
+				}));
+				plane.overdraw = true;
+				scene.add(plane);
 
 				var texture = THREE.ImageUtils.loadTexture( 'files/grass.png' );
 				texture.anisotropy = renderer.getMaxAnisotropy();
-
 				var material = new THREE.MeshBasicMaterial( { map: texture } );
-
 				mesh = new THREE.Mesh( geometry, material );
 				scene.add( mesh );
 
