--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			var container, camera, scener, scene, renderer, stats;
 			var controller, controls;
 			var object = [];
-			var cats = [];
+			var displayHands = [];
 			var objectNum=0;
 
 			init();
@@ -65,25 +65,20 @@
 				window.addEventListener( 'resize', onWindowResize, false );
 
 
-				var Cat = function() {
-					var cat = this;
-					var img = document.createElement('img');
-					img.src = 'https://s3-us-west-2.amazonaws.com/s.cdpn.io/109794/cat_2.png';
-					img.style.position = 'absolute';
-					img.onload = function () {
-						cat.setTransform([window.innerWidth/2,window.innerHeight/2], 0);
-						document.body.appendChild(img);
-					}
+				var handObject = function() {
+					this.setTransform = function(position, rotation) {
+						objectNum++;
 
-					cat.setTransform = function(position, rotation) {
 
-						img.style.left = position[0] - img.width  / 2 + 'px';
-						img.style.top  = position[1] - img.height / 2 + 'px';
-
-						img.style.transform = 'rotate(' + -rotation + 'rad)';
-
-						img.style.webkitTransform = img.style.MozTransform = img.style.msTransform =
-							img.style.OTransform = img.style.transform;
+						//var geometry = new THREE.BoxGeometry( 100, 100, 100 );
+						//var texture = THREE.ImageUtils.loadTexture( 'files/grass.png' );
+						texture.anisotropy = renderer.getMaxAnisotropy();
+						//var material = new THREE.MeshBasicMaterial( { map: texture } );
+						object[objectNum] = new THREE.Mesh( geometry, material );
+						scene.add(object[objectNum]);
+						object[objectNum].position.x = position[0];
+						object[objectNum].position.y = position[0];
+						object[objectNum].position.z = position[0];
 
 					};
 
@@ -93,15 +88,14 @@
 
 					frame.hands.forEach(function(hand, index) {
 
-						var cat = ( cats[index] || (cats[index] = new Cat()) );
-						cat.setTransform(hand.screenPosition(), hand.roll());
+						var displayHand = ( displayHands[index] || (displayHands[index] = new handObject()) );
+						console.log(hand.screenPosition());
+						displayHand.setTransform(hand.screenPosition(), hand.roll());
 
 					});
 
 				}).use('screenPosition', {scale: 0.25});
 
-
-				cats[0] = new Cat();
 
 			}
 
