wtf gh pages load pls

--- a/page.html
+++ b/page.html
@@ -154,6 +154,8 @@
 						}
 						if(this.grabStrength > 70 && this.pinchStrength < 20){
 							if(hand[temp2].type == right){
+								console.log(object.rotation);
+								console.log(hand[temp2].rotation);
 								object.rotation = hand[temp2].rotation;
 							}
 						}
